# vaccel-rust

./: Cargo.toml  NOTICE  README.md  meson.build  meson.options
.github/: renovate.json
.github/linters/: licenserc.yml
.github/workflows/: main-build-and-upload.yml  pr-build-and-verify.yml  pr-trailers.yml  schedule-renovate.yml  schedule-update-notice.yml  validate-code.yml
scripts/: cargo.sh  dist.sh
vaccel-agent/: .gitmodules  CMakeLists.txt  Cargo.toml  NOTICE
vaccel-agent/.github/workflows/: build.yml  deb.yml
vaccel-agent/cmake/: FindRust.cmake
vaccel-agent/packaging/: CMakeLists.txt
vaccel-agent/src/: cli.rs  genop.rs  lib.rs  main.rs  resources.rs  rpc.rs  rpc_async.rs  rpc_sync.rs  session.rs  tf_model.rs  torch_model.rs
vaccel-agent/src/ops/: genop.rs  image.rs  tf.rs  tflite.rs  torch.rs
vaccel-bindings/: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  NOTICE  build.rs  wrapper.h
vaccel-bindings/.github/workflows/: build.yml
vaccel-bindings/examples/: session.rs  tf_inference.rs  tf_model.rs  tf_saved_model.rs  tflite_inference.rs  torch_inference.rs
vaccel-bindings/examples/tf_inference/: main.rs
vaccel-bindings/examples/tf_model/: main.rs
vaccel-bindings/examples/torch_inference/: main.rs
vaccel-bindings/examples/utilities/: mod.rs
vaccel-bindings/src/: arg.rs  blob.rs  config.rs  error.rs  ffi.rs  file.rs  genop.rs  handle.rs  image.rs  lib.rs  macros.rs  noop.rs  profiling.rs  resource.rs  session.rs  shared_obj.rs  tf_inference.rs  tf_model.rs  torch.rs  utilities.rs  vaccel.rs
vaccel-bindings/src/grpc/: mod.rs  tensorflow.rs
vaccel-bindings/src/ops/: genop.rs  image.rs  inference.rs  macros.rs  mod.rs  noop.rs
vaccel-bindings/src/ops/tensorflow/: buffer.rs  inference.rs  mod.rs  model.rs  node.rs  status.rs  tensor.rs
vaccel-bindings/src/ops/tensorflow/lite/: dyn_tensor.rs  inference.rs  mod.rs  model.rs  status.rs  tensor.rs  types.rs
vaccel-bindings/src/ops/tf/: buffer.rs  dyn_tensor.rs  model.rs  node.rs  status.rs  tensor.rs  types.rs
vaccel-bindings/src/ops/tf/lite/: dyn_tensor.rs  model.rs  status.rs  tensor.rs  types.rs
vaccel-bindings/src/ops/torch/: buffer.rs  dyn_tensor.rs  inference.rs  mod.rs  model.rs  tensor.rs  types.rs
vaccel-bindings/src/profiling/: mod.rs  profiler.rs  profiler_manager.rs  region.rs  sample.rs  timespec.rs
vaccel-bindings/src/resources/: mod.rs  shared_obj.rs  single_model.rs  tf_saved_model.rs
vaccel-bindings/src/tensorflow/: buffer.rs  frozen.rs  mod.rs  node.rs  saved_model.rs  tensor.rs
vaccel-bindings/src/vaccel/: mod.rs  vaccel.rs
vaccel-bindings/utilities/: Cargo.toml
vaccel-bindings/utilities/src/: lib.rs
vaccel-client/: CMakeLists.txt  Cargo.toml  NOTICE  build.rs
vaccel-client/src/: client.rs  genop.rs  image.rs  lib.rs  profiling.rs  resources.rs  session.rs  shared_obj.rs  tf_model.rs  torch_model.rs  util.rs
vaccel-client/src/asynchronous/: client.rs  genop.rs  image.rs  mod.rs  profiling.rs  resources.rs  session.rs  shared_obj.rs  tf_model.rs  torch_model.rs
vaccel-client/src/asynchronous/ops/: genop.rs  mod.rs
vaccel-client/src/ops/: genop.rs  image.rs  mod.rs  tf.rs  tflite.rs  torch.rs
vaccel-client/src/resources/: mod.rs  shared_obj.rs  single_model.rs  tf_saved_model.rs
vaccel-client/src/sync/: client.rs  genop.rs  image.rs  mod.rs  profiling.rs  resources.rs  session.rs  shared_obj.rs  tf_model.rs  torch_model.rs
vaccel-grpc/: Cargo.toml  NOTICE  build.rs
vaccel-grpc/protos/: agent.proto  error.proto  genop.proto  image.proto  profiling.proto  resources.proto  session.proto  tensorflow.proto  torch.proto
vaccel-grpc/protos/async/: agent.proto
vaccel-grpc/protos/sync/: agent.proto
vaccel-grpc/src/: agent.rs  agent_ttrpc.rs  error.rs  genop.rs  image.rs  lib.rs  profiling.rs  resources.rs  session.rs  tensorflow.rs  torch.rs
vaccel-grpc/src/asynchronous/: agent.rs  agent_ttrpc.rs
vaccel-grpc/src/sync/: agent.rs  agent_ttrpc.rs  mod.rs
vaccel-rpc-agent/: Cargo.toml
vaccel-rpc-agent/src/: agent.rs  agent_service.rs  cli.rs  lib.rs  main.rs  resource.rs  resources.rs  rpc_async.rs  rpc_sync.rs  session.rs
vaccel-rpc-agent/src/asynchronous/: agent_service.rs
vaccel-rpc-agent/src/ops/: genop.rs  image.rs  mod.rs  tf.rs  tflite.rs  torch.rs
vaccel-rpc-agent/src/sync/: agent_service.rs  mod.rs
vaccel-rpc-client/: Cargo.toml  build.rs  wrapper.h
vaccel-rpc-client/src/: client.rs  lib.rs  profiling.rs  resource.rs  session.rs  util.rs
vaccel-rpc-client/src/asynchronous/: client.rs  mod.rs
vaccel-rpc-client/src/asynchronous/ops/: genop.rs  mod.rs
vaccel-rpc-client/src/ops/: genop.rs  image.rs  tf.rs  tflite.rs  torch.rs
vaccel-rpc-client/src/resources/: mod.rs  shared_obj.rs  single_model.rs  tf_saved_model.rs
vaccel-rpc-client/src/sync/: client.rs
vaccel-rpc-proto/: Cargo.toml  build.rs
vaccel-rpc-proto/protos/: empty.proto  error.proto  genop.proto  image.proto  profiling.proto  resource.proto  session.proto  tensorflow.proto  tf.proto  tflite.proto  torch.proto  vaccel.proto
vaccel-rpc-proto/protos/async/: agent.proto
vaccel-rpc-proto/protos/sync/: agent.proto
vaccel-rpc-proto/src/: lib.rs
vaccel-rpc-proto/src/extensions/: arg.rs  blob.rs  error.rs  mod.rs
vaccel-rpc-proto/src/extensions/ops/: mod.rs
vaccel-rpc-proto/src/extensions/ops/tf/: dyn_tensor.rs  mod.rs  node.rs  status.rs  tensor.rs
vaccel-rpc-proto/src/extensions/ops/tf/lite/: dyn_tensor.rs  mod.rs  status.rs  tensor.rs
vaccel-rpc-proto/src/extensions/ops/torch/: dyn_tensor.rs  mod.rs  tensor.rs
vaccel-rpc-proto/src/extensions/profiling/: mod.rs  profiler.rs  region.rs  sample.rs
