option('async',
  type : 'feature',
  value : 'disabled',
  yield : true,
  description : 'Use the async rpc client/agent implementation')

option('async-stream',
  type : 'feature',
  value : 'disabled',
  yield : true,
  description : 'Use the async streaming rpc client/agent implementation')

option('rpc-client',
  type : 'feature',
  value : 'disabled',
  yield : true,
  description : 'Build the rpc client')

option('rpc-agent',
  type : 'feature',
  value : 'enabled',
  yield : true,
  description : 'Build the rpc agent')
