[package]
name = "vaccelrt-agent"
version = "0.3.7"
authors = ["Babis Chalios <mail@bchalios.io>",
	   "Kostis Papazafeiropoulos <papazof@gmail.com>",
	   "Anastassios Nanos <ananos@nubificus.co.uk>",
	   "George Pyrros <gpyrros@nubificus.co.uk>",
	   "Shenghao Qiu <shenghao@nubificus.co.uk>"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "vlib"
path = "src/rpc.rs"

[dependencies]
protocols = { git = "https://github.com/nubificus/vaccel-grpc.git", tag = "v0.3.7" }
vaccel = { git = "https://github.com/nubificus/vaccel-bindings", tag = "v0.5.7" }
ttrpc = { git = "https://github.com/nubificus/ttrpc-rust.git", tag = "v0.6.1-vaccel-1" }
protobuf = "2.28.0"
ctrlc = { version = "3.2.2", features = ["termination"] }
structopt = { version = "0.3.26", default-features = false }
chashmap = { version = "2.2.2" }
nix = "0.24.1"

env_logger = "0.9.0"
log = "0.4.16"

