[package]
name = "vaccel-agent"
version = "0.3.7"
authors = ["Babis Chalios <mail@bchalios.io>",
	   "Kostis Papazafeiropoulos <papazof@gmail.com>",
	   "Anastassios Nanos <ananos@nubificus.co.uk>",
	   "George Pyrros <gpyrros@nubificus.co.uk>",
	   "Shenghao Qiu <shenghao@nubificus.co.uk>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
protocols = { path = "../vaccel-grpc", version = "0.3.7" }
vaccel = { path = "../vaccel-bindings", version = "0.5.7" }
ttrpc = { git = "https://github.com/nubificus/ttrpc-rust.git", branch = "vaccel-dev", features = ["async"] }
env_logger = "0.11"
log = "0.4"
ctrlc = { version = "3.4", features = ["termination"] }
structopt = { version = "0.3", default-features = false }
dashmap = { version = "6.0" }
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "signal", "macros", "tracing"], optional = true }
async-trait = { version = "0.1", optional = true }
#tracing = "0.1"
#tracing-subscriber = "0.3"

[features]
async = ["dep:async-trait", "dep:tokio"]
