[package]
name = "vaccel"
version = "0.5.7"
authors = ["Babis Chalios <mail@bchalios.io>", 
           "Kostis Papazafeiropoulos <papazof@gmail.com>", 
           "Anastassios Nanos <ananos@nubificus.co.uk>",
           "George Pyrros <gpyrros@nubificus.co.uk>",
           "Shenghao Qiu <shenghao@nubificus.co.uk>"]
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[lib]
name = "vaccel"
path = "src/lib.rs"

[dependencies]
protocols = { path = "../vaccel-grpc", version = "0.3.7" }
protobuf = "3.1"
env_logger = "0.11"
log = "0.4"
libc = "0.2"

[build-dependencies]
libc = ">=0.2.39"
bindgen = "0.69"
pkg-config = "0.3"
cmake = "0.1"

[dev-dependencies]
env_logger = "0.11"
log = "0.4"
