[package]
name = "vaccel"
authors = ["Babis Chalios <mail@bchalios.io>", 
           "Kostis Papazafeiropoulos <papazof@gmail.com>", 
           "Anastassios Nanos <ananos@nubificus.co.uk>",
           "George Pyrros <gpyrros@nubificus.co.uk>",
           "Shenghao Qiu <shenghao@nubificus.co.uk>"]
edition = "2021"
license = "Apache-2.0"
build = "build.rs"

[lib]
name = "vaccel"
path = "src/lib.rs"

[features]
default = ["profiling"]
profiling = []

[dependencies]
bytemuck = { version = "1.23", features = ["extern_crate_alloc"] }
env_logger = "0.11"
half = { version = "2.6", features = ["bytemuck", "num-traits"] }
log = "0.4"
libc = "0.2"
num-traits = "0.2"
protobuf = "3.1"
derive_more = { version = "2.0", features = ["display", "from", "into"] }
thiserror = "1.0"

vaccel-rpc-proto = { path = "../vaccel-rpc-proto" }

[build-dependencies]
libc = "0.2"
bindgen = "0.69"
pkg-config = "0.3"

[dev-dependencies]
env_logger = "0.11"
log = "0.4"
