[package]
name = "vsock"
version = "0.3.7"
authors = ["Babis Chalios <mail@bchalios.io>", 
           "Kostis Papazafeiropoulos <papazof@gmail.com>", 
           "Anastassios Nanos <ananos@nubificus.co.uk>", 
           "Shenghao Qiu <shenghao@nubificus.co.uk"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "vaccel_vsock"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
protocols = { path = "../vaccel-grpc", version = "0.3.7" }
vaccel = { path = "../vaccel-bindings", version = "0.5.7" }
ttrpc = { git = "https://github.com/nubificus/ttrpc-rust.git", tag = "v0.6.1-vaccel-1" }
protobuf = "2.28.0"
nix = "0.24.1"
libc = "0.2"
