[package]
name = "vaccel-client"
version = "0.3.7"
authors = ["Babis Chalios <mail@bchalios.io>", 
           "Kostis Papazafeiropoulos <papazof@gmail.com>", 
           "Anastassios Nanos <ananos@nubificus.co.uk>", 
           "Shenghao Qiu <shenghao@nubificus.co.uk"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "vaccel_client"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
protocols = { path = "../vaccel-grpc", version = "0.3.7" }
vaccel = { path = "../vaccel-bindings", version = "0.5.7" }
ttrpc = { version = "0.8.1", features = ["async"] }
protobuf = "3.1.0"
nix = "0.24.1"
libc = "0.2"
tokio = { version = "1.33", features = ["rt", "rt-multi-thread", "signal", "macros", "tracing"], optional = true }
#tracing = "0.1"
#tracing-subscriber = "0.3"

[features]
async = ["dep:tokio"]
