[package]
name = "vaccel-client"
authors = ["Babis Chalios <mail@bchalios.io>", 
           "Kostis Papazafeiropoulos <papazof@gmail.com>", 
           "Anastassios Nanos <ananos@nubificus.co.uk>", 
           "Shenghao Qiu <shenghao@nubificus.co.uk"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
protocols = { path = "../vaccel-grpc" }
vaccel = { path = "../vaccel-bindings" }
ttrpc = { git = "https://github.com/nubificus/ttrpc-rust.git", branch = "vaccel-dev", features = ["async"] }
protobuf = "3.1"
env_logger = "0.11"
log = "0.4"
dashmap = { version = "6.0" }
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "signal", "macros", "tracing"], optional = true }
#tracing = "0.1"
#tracing-subscriber = "0.3"

[features]
async = ["dep:tokio"]
async-stream = ["async"]
