[package]
name = "protocols"
version = "0.3.4"
authors = [ "Babis Chalios <mail@bchalios.io>", 
            "Kostis Papazafeiropoulos <papazof@gmail.com>", 
            "Anastassios Nanos <ananos@nubificus.co.uk>",
            "George Pyrros <gpyrros@nubificus.co.uk>",
            "Shenghao Qiu <shenghao@nubificus.co.uk>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
ttrpc = { git = "https://github.com/nubificus/ttrpc-rust.git", branch = "vaccel-dev" }
protobuf = "2.28.0"

[build-dependencies]
ttrpc-codegen = "0.2.0"
