[package]
name = "protocols"
version = "0.3.2"
authors = ["Babis Chalios <mail@bchalios.io>", "Kostis Papazafeiropoulos <papazof@gmail.com>", "Anastassios Nanos <ananos@nubificus.co.uk>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
ttrpc = { git = "https://github.com/cloudkernels/ttrpc-rust.git", tag = "v0.6.0-vaccel-1" }
protobuf = "=2.27.1"

[build-dependencies]
ttrpc-codegen = "0.3.0"
