[package]
name = "protocols"
version = "0.3.7"
authors = [ "Babis Chalios <mail@bchalios.io>", 
            "Kostis Papazafeiropoulos <papazof@gmail.com>", 
            "Anastassios Nanos <ananos@nubificus.co.uk>",
            "George Pyrros <gpyrros@nubificus.co.uk>",
            "Shenghao Qiu <shenghao@nubificus.co.uk>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
ttrpc = { version = "0.8.1", features = ["async"] }
protobuf = "3.1.0"
async-trait = "0.1.73"

[build-dependencies]
ttrpc-codegen = "0.4.2"
