[package]
name = "vaccel-rpc-agent"
authors = ["Babis Chalios <mail@bchalios.io>",
	   "Kostis Papazafeiropoulos <papazof@gmail.com>",
	   "Anastassios Nanos <ananos@nubificus.co.uk>",
	   "George Pyrros <gpyrros@nubificus.co.uk>",
	   "Shenghao Qiu <shenghao@nubificus.co.uk>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = { version = "0.1", optional = true }
clap = { version = "4.5", features = ["derive"] }
ctrlc = { version = "3.4", features = ["termination"] }
dashmap = { version = "6.0" }
env_logger = "0.11"
log = "0.4"
protobuf = "3.1"
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "signal", "macros", "tracing"], optional = true }
ttrpc = { git = "https://github.com/nubificus/ttrpc-rust.git", branch = "0.8.0+vaccel", features = ["async"] }
#tracing = "0.1"
#tracing-subscriber = "0.3"

vaccel = { path = "../vaccel-bindings" }
vaccel-rpc-proto = { path = "../vaccel-rpc-proto" }

[features]
async = ["dep:async-trait", "dep:tokio"]
