[package]
name = "vaccel-rpc-client"
authors = ["Babis Chalios <mail@bchalios.io>", 
           "Kostis Papazafeiropoulos <papazof@gmail.com>", 
           "Anastassios Nanos <ananos@nubificus.co.uk>", 
           "Shenghao Qiu <shenghao@nubificus.co.uk"]
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["staticlib"]

[dependencies]
env_logger = "0.11"
log = "0.4"
protobuf = "3.1"
thiserror = "1.0"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "signal", "macros", "tracing"], optional = true }
ttrpc = { git = "https://github.com/nubificus/ttrpc-rust.git", branch = "0.8.0+vaccel", features = ["async"] }
#tracing = "0.1"
#tracing-subscriber = "0.3"

vaccel = { path = "../vaccel-bindings" }
vaccel-rpc-proto = { path = "../vaccel-rpc-proto" }

[features]
async = ["dep:tokio"]
async-stream = ["async"]

[build-dependencies]
cbindgen = "0.27"
