[package]
name = "vaccel-rpc-proto"
authors = [ "Babis Chalios <mail@bchalios.io>", 
            "Kostis Papazafeiropoulos <papazof@gmail.com>", 
            "Anastassios Nanos <ananos@nubificus.co.uk>",
            "George Pyrros <gpyrros@nubificus.co.uk>",
            "Shenghao Qiu <shenghao@nubificus.co.uk>"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
protobuf = "3.1"
ttrpc = { git = "https://github.com/nubificus/ttrpc-rust.git", branch = "0.8.0+vaccel", features = ["async"] }

vaccel = { path = "../vaccel-bindings" }

[build-dependencies]
ttrpc-codegen = { git = "https://github.com/nubificus/ttrpc-rust.git", branch = "0.8.0+vaccel" }
