[package]
name = "utilities"
version = "0.1.0"
authors = ["Babis Chalios <mail@bchalios.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8.3"
log = "0.4.0"
vaccel = { path = ".." }
protocols = { git = "https://github.com/cloudkernels/vaccel-grpc", tag = "v0.3.3" }

[patch.'https://github.com/cloudkernels/vaccel-grpc']
protocols = { path = "../../../vaccel-grpc" }
